# simulation

./: .gitignore  uas_sim.slx
simulation/: baseline.slxc  bus_defs.mat  config.m  propeller.slxc  setup.m  sim_setup.m  simple_motor_mdl.slxc  trim.m  trim_sim.slxc  uas_sim.slx  uas_sim.slxc
simulation/defs/sensors/: FmuR_v1.m
simulation/defs/vehicles/: UltraStick25e.m
simulation/models/environment/: env_mdl_aero_blockset.slx  env_mdl_test.slx
simulation/models/propulsion/: propeller.slx  simple_motor_mdl.slx
simulation/models/sensors/: accel.slx  gnss_receiver.slx  gyro.slx  imu_6dof.slx  magnetometer.slx  pressure.slx
simulation/s_fun/filter/: filter.h  filter_wrapper.cpp  filter_wrapper.mexw64  untitled.slx  untitled.slx.autosave
simulation/vms/: baseline.slx
software/: CMakeLists.txt
software/flight/: airdata.cc  datalog.cc  datalog.options  datalog.proto  effector.cc  flight.cc  gnss.cc  imu.cc  inceptor.cc  print_msg.cc  vms.cc
software/include/flight/: airdata.h  global_defs.h  gnss.h  hardware_defs.h  imu.h  inceptor.h  vms.h
vms/: baseline.slx  bus_defs.mat
